# devenv-haskell-example

./: CHANGELOG.md  LICENSE  devenv-haskell-example.cabal  devenv.nix  devenv.yaml
.github/workflows/: test.yml
