cabal-version:      3.0
name:               devenv-haskell-example
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             ParetoOptimalDev
maintainer:         pareto.optimal@mailfence.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable devenv-haskell-example
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0, amazonka-core == 2.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
